--- a/base.css
+++ b/base.css
@@ -74,6 +74,18 @@ nav a{
     max-width: 100%;
     height: auto;
 }
+
+.chahan{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.eisuke{
+    display: blocks;
+    width: 100%;
+    height: auto;
+}
 .map-container {
     position: relative;
     width: 100%; /* 親コンテナに収まる */
@@ -132,6 +144,15 @@ nav a{
         margin: 0 auto;  /* 中央揃え */
     }
     
+    .chahan{
+        width: 100%;
+        height: auto;
+    }
+
+    .eisuke{
+        width: 100%;
+        height: auto;
+    }
     .texxt {
         max-width: 90%; /* テキストの幅を狭く */
         margin: 10px auto; /* 上下の余白を調整 */
