--- a/base.css
+++ b/base.css
@@ -137,6 +137,11 @@ nav a{
         height: auto; /* 高さを自動調整 */
     }
 
+    .logo{
+        width: 60%;
+        margin: 0 auto;
+    }
+    
     .logo img {
         max-width: 100%; /* 親要素の幅に合わせる */
         height: auto;    /* 高さを自動調整 */
