--- a/base.css
+++ b/base.css
@@ -9,22 +9,22 @@ body{
       transform: translateX(-100%);
     }
 }
-.scroll-infinity__wrap {
+.logo__wrap {
     display: flex;
     overflow: hidden;
 }
-.scroll-infinity__list {
+.logo__list {
     display: flex;
     list-style: none;
     padding: 0
 }
-.scroll-infinity__list--left {
+.logo__list--left {
     animation: infinity-scroll-left 80s infinite linear 0.5s both;
 }
-.scroll-infinity__item {
+.logo {
     width: calc(100vw / 6);
 }
-.scroll-infinity__item>img {
+.logo>img {
     width: 100%;
 }
 
@@ -132,25 +132,25 @@ nav a{
           transform: translateX(-100%);
         }
     }
-    .scroll-infinity__wrap {
+    .logo__wrap {
         display: flex;
         overflow: hidden;
     }
-    .scroll-infinity__list {
+    .logo__list {
         display: flex;
         list-style: none;
         padding: 0
     }
-    .scroll-infinity__list--left {
+    .logo__list--left {
         animation: infinity-scroll-left 80s infinite linear 0.5s both;
     }
-    .scroll-infinity__item {
+    .logo {
         width: calc(100vw / 6);
     }
-    .scroll-infinity__item>img {
-        width: 100%;
+    .logo>img {
+        width: 60%;
     }
-    
+
     .texxt {
         max-width: 90%; /* テキストの幅を狭く */
         margin: 10px auto; /* 上下の余白を調整 */
