--- a/base.css
+++ b/base.css
@@ -24,9 +24,11 @@ body{
 }
 .scroll-infinity__item {
     width: calc(200vw / 5);
+
 }
 .scroll-infinity__item>img {
     width: 100%;
+    height: 100%;
 }
 
 nav ul{
