--- a/base.css
+++ b/base.css
@@ -144,6 +144,7 @@ nav a{
     }
     .scroll-infinity__item>img {
         width: 100%; /* 画像サイズを調整 */
+        height: 100%;
     }
 
     .texxt {
