--- a/base.css
+++ b/base.css
@@ -2,7 +2,35 @@ body{
     background-color: #E6FFE9;
 }
 
+@keyframes infinity-scroll-left {
+    from {
+      transform: translateX(0);
+    }
+      to {
+      transform: translateX(-100%);
+    }
+}
 
+.scroll-infinity__wrap {
+    display: flex;
+    overflow: hidden;
+}
+.scroll-infinity__list {
+    display: flex;
+    list-style: none;
+    padding: 0
+}
+.scroll-infinity__list--left {
+    animation: infinity-scroll-left 80s infinite linear 0.5s both;
+}
+.scroll-infinity__item {
+    width: calc(200vw / 5);
+
+}
+.scroll-infinity__item>img {
+    width: 100%;
+    height: 100%;
+}
 
 nav ul{
     display: block;
