--- a/base.css
+++ b/base.css
@@ -54,6 +54,14 @@ nav a{
     background: transport;
 }
 
+#map {
+    width: 100%;
+    height: 500px;
+    max-width: 1200px;
+    margin: 20px auto;
+    border: 2px solid #ddd;
+}
+
 .tocs1 {
     margin: 0 auto;
     color: navy;
